# SpectrumFoundationModel

./: .gitignore  AGENTS.md  Makefile  README.md  RESEARCH_LOG.md  TRAINING_REGISTRY.yaml  pyproject.toml  requirements.txt
.cursor/rules/: python-venv.mdc
docs/: FOUNDATIONMODEL_VS_DESIFM_DATA.md  NERSC_INTERACTIVE.md
notebooks/: 01_phase_data.ipynb  02_phase_codec.ipynb  03_phase_codec_eval.ipynb  04_phase_approach_a.ipynb  05_phase_approach_b.ipynb  06_phase_benchmark.ipynb  07_phase_ood.ipynb  08_phase_submission.ipynb
scripts/: bootstrap_venv.sh  build_manifest.py  cache_aion_tokens.py  check_aion_install.py  download_dr1_local.py  prefetch_aion_codec.py  render_codec_notebooks.py  run_smoke_local.sh  smoke_aion_tokenizer.py  stage_data.py  train_codec.py  train_codec_ddp.slurm  train_model.py
src/desifm/: __init__.py  constants.py
src/desifm/data/: aion_cache.py  dr1_stream.py  public_dr1.py  stitch.py  (+1 more)
tests/: test_aion_bridge.py  test_aion_cache.py  test_aion_grid.py  test_batching.py  test_blocks.py  test_codec_eval.py  test_codec_input.py  test_codec_loss.py  test_distributed.py  test_dr1_stream.py  test_dr1_stream_collate.py  test_dr1_utils.py  test_env.py  test_loss_tracker.py  test_metrics.py  test_paths.py  test_public_dr1.py  test_public_dr1_training_tiles.py  test_redshift_codec.py  test_smoke_train.py  test_spectrum_codec.py  test_spectrum_codec_v5.py  test_stage.py  test_stitch.py  test_synthetic.py  test_train_codec_v4.py  test_train_model_aion.py  test_train_model_desifm.py  test_train_model_resume.py  test_transformer.py  test_viz.py  test_wandb_artifact.py  test_wandb_resume.py
(+22 files in other folders)
