[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desifm"
version = "0.2.0"
description = "Unimodal DESI spectrum foundation model (from-scratch implementation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "astropy",
    "tqdm",
    "wandb>=0.16",
    "python-dotenv>=1.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "polymathic-aion>=0.0.2",
    "huggingface_hub>=0.20",
    "safetensors>=0.4.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyyaml>=6.0"]
# alias for docs/scripts that still reference [aion]
aion = ["polymathic-aion>=0.0.2", "huggingface_hub>=0.20", "safetensors>=0.4.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "aion: tests that require polymathic-aion and HF codec weights",
]
